--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,18 +1,33 @@
+appdirs==1.4.3
 astroid==2.3.3
-autopep8==1.4.4
-certifi==2019.9.11
+autopep8==1.5
+certifi==2019.11.28
 chardet==3.0.4
 Deprecated==1.2.7
-idna==2.8
+distlib==0.3.0
+entrypoints==0.3
+filelock==3.0.12
+flake8==3.7.9
+idna==2.9
+importlib-metadata==1.5.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+packaging==20.3
+pluggy==0.13.1
+py==1.8.1
 pycodestyle==2.5.0
-PyGithub==1.44.1
+pyflakes==2.1.1
+PyGithub==1.46
 PyJWT==1.7.1
 pylint==2.4.4
-requests==2.22.0
-six==1.13.0
-typed-ast==1.4.0
-urllib3==1.25.7
-wrapt==1.11.2
+pyparsing==2.4.6
+requests==2.23.0
+six==1.14.0
+toml==0.10.0
+tox==3.14.5
+typed-ast==1.4.1
+urllib3==1.25.8
+virtualenv==20.0.9
+wrapt==1.12.1
+zipp==3.1.0
