--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -25,7 +25,7 @@ jobs:
           pip3 install flake8 pylint
       - name: flake8
         run: |
-          flake8 python_github_stats/
+          flake8 github_stats/
       - name: pylint
         run: |
-          pylint python_github_stats/
+          pylint github_stats/
