--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_script:
   - pip3 install flake8 pylint
 
 script:
-  - flake8 python_github_stats/
-  - pylint python_github_stats/
+  - flake8 github_stats/
+  - pylint github_stats/
