--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -1,5 +1,5 @@
 ---
-name: Python Test
+name: Default Tests
 on: push
 jobs:
   build:
@@ -7,25 +7,27 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7]
+        python-version: [3.7, 3.8]
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
         with:
-          path: python-github-stats
+          submodules: recursive
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-
+      - uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip3 install -r requirements.txt
-          pip3 install flake8 pylint
-      - name: flake8
+          pip install -r requirements.txt -r requirements-dev.txt
+          pip install pre-commit
+      - name: Run pre-commit checks
         run: |
-          flake8 github_stats/
-      - name: pylint
-        run: |
-          pylint github_stats/
+          SKIP=no-commit-to-branch pre-commit run --all-files
